# tic-tac-toe

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  tic_tac.cpp
.github/workflows/: ci.yml
include/: AIPlayer.h  Board.h  GameManager.h
src/: AIPlayer.cpp  Board.cpp  CMakeLists.txt  GameManager.cpp  main.cpp  resources.qrc
src/Core/: AIPlayer.cpp  Board.cpp  CMakeLists.txt  GameManager.cpp  main.cpp
src/Core/include/: AIPlayer.h  Board.h  GameManager.h  GameTypes.h
src/UI/: CMakeLists.txt  Game.qml  Main.qml  Startup.qml
src/Wrapper/: CMakeLists.txt  GameManager.cpp  GameManager.h  GameManagerWrapper.cpp  GameManagerWrapper.h  GameTypesWrapper.h
tests/: CMakeLists.txt  test_main.cpp
